solc_mutator_ossfuzz_seed_corpus/test_sol/test_d9b173940a62bf8cad86517782a9f45d449ecaee732ae71072144b0632d2932a_f876ea5ff590b4eebed3430a3121da0dfb317035_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma abicoder v2;
pragma solidity >= 0.0.0;
function f0()  returns(int240 o0,int112 o1,bytes19 o2)
{



  {


o0 = ~(((-796565807664262036467517300810479599509515966376711133685006337174446608 & 55821556279766118585878472776228118205385858735742484003233762468721676) | (-265910742465081473381569664580802252246087552050132887198924078249066152 * -615440548324674045742417876166470885026896181262063216473069449160391128)));
  }
}
// ----
// TypeError 7407: (su0.sol:121-429): Type int_const -163...(137 digits omitted)...2817 is not implicitly convertible to expected type int240. Literal is too large to fit in int240.
